@@ -19,6 +19,7 @@ utils:
 address-edit: new filter tag has / has.nocase / has.regex and tag.count >,<,=,! / object is.recursive.member.of
 address-edit: new filter reflocation is / reflocation is.only / refstore is / reftype is
 address-edit: new action description-append
+address-edit: new action add-member
 override-finder: supporting scenario where template defined objects are not present in candidate config
 rules-edit: new filter 'service has.recursive', 'secprof av-profile.is.set', 'secprof as-profile.is.set', 'secprof url-profile.is.set', 'secprof wf-profile.is.set', 'secprof vuln-profile.is.set'
 rules-edit: new filter 'secprof file-profile.is', 'secprof file-profile.is.set', 'secprof data-profile.is', 'secprof data-profile.is.set'
